--- a/admin/view/template/extension/theme/helium.twig
+++ b/admin/view/template/extension/theme/helium.twig
@@ -217,7 +217,7 @@
                     <input type="text" name="image_product_width" value="{{ image_product_width }}" placeholder="{{ entry_width }}" id="input-image-product-width" class="form-control" />
                   </div>
                   <div class="col-sm-6">
-                    <input type="text" name="theme_helium_image_product_height" value="{{ theme_helium_image_product_height }}" placeholder="{{ entry_height }}" class="form-control" />
+                    <input type="text" name="image_product_height" value="{{ image_product_height }}" placeholder="{{ entry_height }}" class="form-control" />
                   </div>
                 </div>
                 {% if error_image_product %}
