--- a/catalog/view/theme/helium/template/common/cart_modal.twig
+++ b/catalog/view/theme/helium/template/common/cart_modal.twig
@@ -4,17 +4,31 @@
     <table class="table table-striped">
       {% for product in products %}
       <tr id="product_id_{{product.product_id}}">
-        <td class="text-center">{% if product.thumb %} <a href="{{ product.href }}"><img loading="lazy" src="{{ product.thumb }}" alt="{{ product.name }}" title="{{ product.name }}" class="img-thumbnail" /></a> {% endif %}</td>
-        <td class="text-left cart-name"><a href="{{ product.href }}">{{ product.name }}</a> {% if product.option %}
-          {% for option in product.option %} <br />
-          - <small>{{ option.name }} {{ option.value }}</small> {% endfor %}
-          {% endif %}
-          {% if product.recurring %} 
-          <br />
-          - <small>{{ text_recurring }} {{ product.recurring }}</small> 
+        <td class="text-center">
+          {% if product.thumb %} 
+            <a href="{{ product.href }}">
+              <img 
+                loading="lazy" 
+                src="{{ product.thumb }}" 
+                alt="{{ product.name }}" 
+                title="{{ product.name }}" 
+                class="img-thumbnail" 
+              />
+            </a> 
           {% endif %}
         </td>
-        <td class="text-right cart-qty">x {{ product.quantity }}</td>
+        <td class="text-left cart-name"><a href="{{ product.href }}">{{ product.name }}</a> 
+        {% if product.option %}
+          {% for option in product.option %} <br />
+            - <small>{{ option.name }} {{ option.value }}</small> 
+          {% endfor %}
+        {% endif %}
+        {% if product.recurring %} 
+          <br />
+          - <small>{{ text_recurring }} {{ product.recurring }}</small> 
+        {% endif %}
+        </td>
+        <td class="text-right cart-qty"> &times; {{ product.quantity }}</td>
         <td class="text-right">{{ product.total }}</td>
         <td class="text-center cart-remove">
           <button type="button" onclick="cart.remove('{{ product.cart_id }}');" title="{{ button_remove }}" class="danger btn-cart-remove"></button>
