--- a/catalog/view/theme/helium/template/common/meta_links.twig
+++ b/catalog/view/theme/helium/template/common/meta_links.twig
@@ -11,7 +11,7 @@
     <meta name="geo.position"  content="50.97590;0.01722">
     <meta name="geo.region"    content="GB">
     <meta name="geo.placename" content="London, United Kingdom">
-    <meta name="ICBM"          content="50.9759, 0.0172">
+    {# <meta name="ICBM"          content="50.9759, 0.0172"> #}
     <a href="geo:37.786971,-122.399677;u=35">
     <meta name="DC.title"      content="Location Name">
     <!-- Search Eengine and Browser Meta Tags. -->
@@ -56,13 +56,13 @@
     
 
     <!-- Favicon Meta Tags.  -->
-    <link rel="icon" href="/graphics/favicon.ico">
+    {# <link rel="icon" href="/graphics/favicon.ico">
     <link rel="icon" href="/graphics/favicon-16.png"  sizes="16x16"   type="image/png">
     <link rel="icon" href="/graphics/favicon-32.png"  sizes="32x32"   type="image/png">
     <link rel="icon" href="/graphics/favicon-48.png"  sizes="48x48"   type="image/png">
     <link rel="icon" href="/graphics/favicon-62.png"  sizes="62x62"   type="image/png">
     <link rel="icon" href="/graphics/favicon-128.png" sizes="128x128" type="image/png">
-    <link rel="icon" href="/graphics/favicon-192.png" sizes="192x192" type="image/png">
+    <link rel="icon" href="/graphics/favicon-192.png" sizes="192x192" type="image/png"> #}
     <!-- Web App Settings. -->
     <meta name="application-name" content="Application Name">
     <meta name="mobile-web-app-capable" content="yes">
