--- a/catalog/view/theme/helium/template/account/recurring_list.twig
+++ b/catalog/view/theme/helium/template/account/recurring_list.twig
@@ -1,25 +1,21 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main id="account-recurring">
-
-  {{ column_left }}
-
-    {{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      {% if recurrings %}
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          <thead>
-            <tr>
-              <td class="text-right">{{ column_order_recurring_id }}</td>
-              <td class="text-left">{{ column_product }}</td>
-              <td class="text-left">{{ column_status }}</td>
-              <td class="text-left">{{ column_date_added }}</td>
-              <td class="text-right"></td>
-            </tr>
-          </thead>
-          <tbody>
-          
+  <h1>{{ heading_title }}</h1>
+  {{ content_top }}
+  {% if recurrings %}
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <td class="text-right">{{ column_order_recurring_id }}</td>
+            <td class="text-left">{{ column_product }}</td>
+            <td class="text-left">{{ column_status }}</td>
+            <td class="text-left">{{ column_date_added }}</td>
+            <td class="text-right"></td>
+          </tr>
+        </thead>
+        <tbody>
           {% for recurring in recurrings %}
           <tr>
             <td class="text-right">#{{ recurring.order_recurring_id }}</td>
@@ -29,18 +25,18 @@
             <td class="text-right"><a href="{{ recurring.view }}" data-toggle="tooltip" title="{{ button_view }}" class="btn btn-info"><i class="fa fa-eye"></i></a></td>
           </tr>
           {% endfor %}
-          
-          </tbody>
-        </table>
-      </div>
-      <div class="text-right">{{ pagination }}</div>
-      {% else %}
-      <p>{{ text_empty }}</p>
-      {% endif %}
-      <div class="buttons clearfix">
-        <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
-      </div>
-      {{ content_bottom }}
-    {{ column_right }}
+        </tbody>
+      </table>
+    </div>
+    <div>{{ pagination }}</div>
+  {% else %}
+    <p>{{ text_empty }}</p>
+  {% endif %}
+    <div class="buttons clearfix">
+      <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
+    </div>
+  {{ content_bottom }}
 </main>
+{{ column_left }}
+{{ column_right }}
 {{ footer }}
