--- a/catalog/view/theme/helium/template/account/reset.twig
+++ b/catalog/view/theme/helium/template/account/reset.twig
@@ -1,39 +1,35 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main id="account-reset">
-
-  {{ column_left }}
-
-    {{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      <form action="{{ action }}" method="post" enctype="multipart/form-data" >
-        <fieldset>
-          <legend>{{ text_password }}</legend>
-          <div class="form-group">
-            <label for="input-password">{{ entry_password }}</label>
-            <div class="col-sm-10">
-              <input type="password" name="password" value="{{ password }}" id="input-password" />
-              {% if error_password %}
-              <div class="text-danger">{{ error_password }}</div>
-              {% endif %} </div>
-          </div>
-          <div class="form-group">
-            <label for="input-confirm">{{ entry_confirm }}</label>
-            <div class="col-sm-10">
-              <input type="password" name="confirm" value="{{ confirm }}" id="input-confirm" />
-              {% if error_confirm %}
-              <div class="text-danger">{{ error_confirm }}</div>
-              {% endif %}</div>
-          </div>
-        </fieldset>
-        <div class="buttons clearfix">
-          <div class="pull-left"><a href="{{ back }}" class="button">{{ button_back }}</a></div>
-          <div class="pull-right">
-            <button type="submit" class="primary">{{ button_continue }}</button>
-          </div>
-        </div>
-      </form>
-      {{ content_bottom }}
-    {{ column_right }}
+  <h1>{{ heading_title }}</h1>
+  {{ content_top }}
+  <form action="{{ action }}" method="post" enctype="multipart/form-data" >
+    <fieldset>
+      <legend>{{ text_password }}</legend>
+      <div class="form-group">
+        <label for="input-password">{{ entry_password }}</label>
+        <input type="password" name="password" value="{{ password }}" id="input-password" />
+        {% if error_password %}
+          <div class="text-danger">{{ error_password }}</div>
+        {% endif %}
+      </div>
+      <div class="form-group">
+        <label for="input-confirm">{{ entry_confirm }}</label>
+        <input type="password" name="confirm" value="{{ confirm }}" id="input-confirm" />
+        {% if error_confirm %}
+          <div class="text-danger">{{ error_confirm }}</div>
+        {% endif %}
+      </div>
+    </fieldset>
+    <div class="buttons clearfix">
+      <div class="pull-left"><a href="{{ back }}" class="button">{{ button_back }}</a></div>
+      <div class="pull-right">
+        <button type="submit" class="primary">{{ button_continue }}</button>
+      </div>
+    </div>
+  </form>
+  {{ content_bottom }}
 </main>
+{{ column_left }}
+{{ column_right }}
 {{ footer }}
