--- a/catalog/view/theme/helium/template/account/return_list.twig
+++ b/catalog/view/theme/helium/template/account/return_list.twig
@@ -1,26 +1,22 @@
 {{ header }}
 {% include 'helium/template/common/breadcrumbs.twig' %}
 <main id="account-return">
-
-  {{ column_left }}
-
-    {{ content_top }}
-      <h1>{{ heading_title }}</h1>
-      {% if returns %}
-      <div class="table-responsive">
-        <table class="table table-bordered table-hover">
-          <thead>
-            <tr>
-              <td class="text-right">{{ column_return_id }}</td>
-              <td class="text-left">{{ column_status }}</td>
-              <td class="text-left">{{ column_date_added }}</td>
-              <td class="text-right">{{ column_order_id }}</td>
-              <td class="text-left">{{ column_customer }}</td>
-              <td></td>
-            </tr>
-          </thead>
-          <tbody>
-          
+  <h1>{{ heading_title }}</h1>
+  {{ content_top }}
+  {% if returns %}
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <td class="text-right">{{ column_return_id }}</td>
+            <td class="text-left">{{ column_status }}</td>
+            <td class="text-left">{{ column_date_added }}</td>
+            <td class="text-right">{{ column_order_id }}</td>
+            <td class="text-left">{{ column_customer }}</td>
+            <td></td>
+          </tr>
+        </thead>
+        <tbody>
           {% for return in returns %}
           <tr>
             <td class="text-right">#{{ return.return_id }}</td>
@@ -31,21 +27,21 @@
             <td class="text-right"><a href="{{ return.href }}" data-toggle="tooltip" title="{{ button_view }}" class="btn btn-info"><i class="fa fa-eye"></i></a></td>
           </tr>
           {% endfor %}
-            </tbody>
-          
-        </table>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 text-left">{{ pagination }}</div>
-        <div class="col-sm-6 text-right">{{ results }}</div>
-      </div>
-      {% else %}
-      <p>{{ text_empty }}</p>
-      {% endif %}
-      <div class="buttons clearfix">
-        <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
-      </div>
-      {{ content_bottom }}
-    {{ column_right }}
-</div>
+        </tbody>
+      </table>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 text-left">{{ pagination }}</div>
+      <div class="col-sm-6 text-right">{{ results }}</div>
+    </div>
+  {% else %}
+    <p>{{ text_empty }}</p>
+  {% endif %}
+  <div class="buttons clearfix">
+    <div class="pull-right"><a href="{{ continue }}" class="primary">{{ button_continue }}</a></div>
+  </div>
+  {{ content_bottom }}
+</main>
+{{ column_left }}
+{{ column_right }}
 {{ footer }} 
