--- a/catalog/view/theme/helium/template/blog/review.twig
+++ b/catalog/view/theme/helium/template/blog/review.twig
@@ -1,23 +1,27 @@
 {% if reviews %}
-{% for review in reviews %}
-<table class="table table-striped table-bordered">
-  <tr>
-    <td style="width: 50%;"><strong>{{ review.author }}</strong></td>
-    <td class="text-right">{{ review.date_added }}</td>
-  </tr>
-  <tr>
-    <td colspan="2"><p>{{ review.text }}</p>
-      {% for i in 1..5 %}
-        {% if review.rating < i %} 
-          <i class="star"></i>
-        {% else %}
-          <i class="star"></i><i class="fa fa-star-o fa-stack-2x"></i>
-        {% endif %}
-      {% endfor %}</td>
-  </tr>
-</table>
-{% endfor %}
-<div class="text-right">{{ pagination }}</div>
+  {% for review in reviews %}
+  <table class="table table-striped table-bordered">
+    <tr>
+      <td style="width: 50%;"><strong>{{ review.author }}</strong></td>
+      <td class="text-right">{{ review.date_added }}</td>
+    </tr>
+    <tr>
+      <td colspan="2">
+        <p>{{ review.text }}</p>
+        <div class="rating">
+          {% for i in 1..5 %}
+            {% if review.rating < i %}
+              <i class="icon-star-empty"></i>
+            {% else %}
+              <i class="icon-star"></i>
+            {% endif %}
+          {% endfor %}
+        </div>
+        </td>
+    </tr>
+  </table>
+  {% endfor %}
+  <div class="text-right">{{ pagination }}</div>
 {% else %}
-<p>{{ text_no_reviews }}</p>
+  <p>{{ text_no_reviews }}</p>
 {% endif %} 
