--- a/catalog/view/theme/helium/template/common/footer.twig
+++ b/catalog/view/theme/helium/template/common/footer.twig
@@ -1,10 +1,9 @@
 
 <footer>
-    
-      {% if informations %}
-      <div class="flex wrap">
-        <span class="h5 flex-1-0-100">{{ text_information }}</span>
-        {% for row in informations|batch(informations|length / 4|round(1, 'ceil')) %}
+  {% if informations %}
+    <div class="flex wrap">
+      <span class="h5 flex-1-0-100">{{ text_information }}</span>
+      {% for row in informations|batch(informations|length / 4|round(1, 'ceil')) %}
         <div class="flex">
           <ul class="list-unstyled">
             {% for i in row %}
@@ -12,47 +11,47 @@
             {% endfor %}
           </ul>
         </div>
-        {% endfor %}
-        </div>
-      {% endif %}
-      <div class="flex">
-      <div>
-        <span class="h5">{{ text_service }}</span>
-        <ul class="list-unstyled">
-          <li><a href="{{ contact }}">{{ text_contact }}</a></li>
-          <li><a href="{{ return }}">{{ text_return }}</a></li>
-          <li><a href="{{ sitemap }}">{{ text_sitemap }}</a></li>
-        </ul>
-      </div>
-      <div>
-        <span class="h5">{{ text_extra }}</span>
-        <ul class="list-unstyled">
-          <li><a href="{{ manufacturer }}">{{ text_manufacturer }}</a></li>
-          <li><a href="{{ voucher }}">{{ text_voucher }}</a></li>
-          <li><a href="{{ affiliate }}">{{ text_affiliate }}</a></li>
-          <li><a href="{{ special }}">{{ text_special }}</a></li>
-        </ul>
-      </div>
-      <div>
-        <span class="h5">{{ text_account }}</span>
-        <ul class="list-unstyled">
-          <li><a href="{{ account }}">{{ text_account }}</a></li>
-          <li><a href="{{ order }}">{{ text_order }}</a></li>
-          <li><a href="{{ wishlist }}">{{ text_wishlist }}</a></li>
-          <li><a href="{{ newsletter }}">{{ text_newsletter }}</a></li>
-        </ul>
-      </div>
+      {% endfor %}
     </div>
-    <hr>
-    <p>{{ powered }}</p>
+  {% endif %}
+  <div class="flex">
+    <div>
+      <span class="h5">{{ text_service }}</span>
+      <ul class="list-unstyled">
+        <li><a href="{{ contact }}">{{ text_contact }}</a></li>
+        <li><a href="{{ return }}">{{ text_return }}</a></li>
+        <li><a href="{{ sitemap }}">{{ text_sitemap }}</a></li>
+      </ul>
+    </div>
+    <div>
+      <span class="h5">{{ text_extra }}</span>
+      <ul class="list-unstyled">
+        <li><a href="{{ manufacturer }}">{{ text_manufacturer }}</a></li>
+        <li><a href="{{ voucher }}">{{ text_voucher }}</a></li>
+        <li><a href="{{ affiliate }}">{{ text_affiliate }}</a></li>
+        <li><a href="{{ special }}">{{ text_special }}</a></li>
+      </ul>
+    </div>
+    <div>
+      <span class="h5">{{ text_account }}</span>
+      <ul class="list-unstyled">
+        <li><a href="{{ account }}">{{ text_account }}</a></li>
+        <li><a href="{{ order }}">{{ text_order }}</a></li>
+        <li><a href="{{ wishlist }}">{{ text_wishlist }}</a></li>
+        <li><a href="{{ newsletter }}">{{ text_newsletter }}</a></li>
+      </ul>
+    </div>
+  </div>
+  <hr>
+  <p>{{ powered }}</p>
 </footer>
 {% for style in styles %}
-<link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
+  <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
 {% endfor %}
 {% for script in scripts %}
-<script src="{{ script }}" type="text/javascript"></script>
+  <script script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
-  <script defer rel="preload" as="script" type="text/javascript" src="catalog/view/theme/helium/js/common.js" type="text/javascript"></script>
+<script defer rel="preload" as="script" type="text/javascript" src="catalog/view/theme/helium/js/common.js" type="text/javascript"></script>
 
 </body>
 </html>
