--- a/admin/view/template/blog/setting.twig
+++ b/admin/view/template/blog/setting.twig
@@ -274,7 +274,7 @@
                   {% endif %}
                 </div>
               </div>
-              <div class="form-group required">
+              {# <div class="form-group required">
                 <label class="col-sm-2 control-label" for="input-image-related">{{ entry_image_related }}</label>
                 <div class="col-sm-10">
                   <div class="row">
@@ -289,7 +289,7 @@
                   <div class="text-danger">{{ error_image_related }}</div>
                   {% endif %}
                 </div>
-              </div>
+              </div> #}
             </div>
         </form>
       </div>
