--- a/catalog/view/theme/helium/template/extension/total/coupon.twig
+++ b/catalog/view/theme/helium/template/extension/total/coupon.twig
@@ -1,15 +1,16 @@
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h4 class="panel-title"><a href="#collapse-coupon" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ heading_title }} <i class="icon-chevron-down"></i></a></h4>
+    <h4 class="panel-title">
+		<a href="#collapse-coupon" class="accordion-toggle" data-toggle="collapse" data-parent="#accordion">{{ heading_title }} <i class="icon-chevron-down"></i></a></h4>
   </div>
   <div id="collapse-coupon" class="panel-collapse collapse">
-    <div class="panel-body">
-      <label for="input-coupon">{{ entry_coupon }}</label>
-      <div class="input-group">
-        <input type="text" name="coupon" value="{{ coupon }}" placeholder="{{ entry_coupon }}" id="input-coupon" />
-        <span class="input-group-btn">
-        <input type="button" value="{{ button_coupon }}" id="button-coupon"  class="primary" />
-        </span></div>
+    <label for="input-coupon">{{ entry_coupon }}</label>
+    <div class="input-group">
+      <input type="text" name="coupon" value="{{ coupon }}" placeholder="{{ entry_coupon }}" id="input-coupon" />
+      <button type="button" title="{{ button_coupon }}" id="button-coupon"  class="primary">{{ button_coupon }}</button>
+    </div>
+  </div>
+</div>
       <script type="text/javascript"><!--
 $('#button-coupon').on('click', function() {
 	$.ajax({
@@ -18,10 +19,8 @@ $('#button-coupon').on('click', function() {
 		data: 'coupon=' + encodeURIComponent($('input[name=\'coupon\']').val()),
 		dataType: 'json',
 		beforeSend: function() {
-			$('#button-coupon').button('loading');
 		},
 		complete: function() {
-			$('#button-coupon').button('reset');
 		},
 		success: function(json) {
 			$('.alert-dismissible').remove();
@@ -42,6 +41,3 @@ $('#button-coupon').on('click', function() {
 	});
 });
 //--></script>
-    </div>
-  </div>
-</div>
