--- a/catalog/view/theme/helium/template/product/category.twig
+++ b/catalog/view/theme/helium/template/product/category.twig
@@ -39,6 +39,7 @@
   {% endif %}
 
   {% if products %}
+    {# {{ sorts | json_encode(constant('JSON_UNESCAPED_UNICODE')) }} #}
     <div class="row category-sort">
       <div class="form-group">
         <label for="input-sort">{{ text_sort }}</label>
