--- a/catalog/view/theme/helium/template/common/footer.twig
+++ b/catalog/view/theme/helium/template/common/footer.twig
@@ -1,8 +1,8 @@
 
 <footer>
   {% if informations %}
-    <div class="flex wrap">
-      <span class="h5 flex-1-0-100">{{ text_information }}</span>
+    <span class="h5">{{ text_information }}</span>
+    <div class="grid">
       {% for row in informations|batch(informations|length / 4|round(1, 'ceil')) %}
         <div class="flex">
           <ul class="list-unstyled">
@@ -14,7 +14,7 @@
       {% endfor %}
     </div>
   {% endif %}
-  <div class="flex">
+  <div class="grid">
     <div>
       <span class="h5">{{ text_service }}</span>
       <ul class="list-unstyled">
@@ -49,7 +49,7 @@
   <link href="{{ style.href }}" type="text/css" rel="{{ style.rel }}" media="{{ style.media }}" />
 {% endfor %}
 {% for script in scripts %}
-  <script script src="{{ script }}" type="text/javascript"></script>
+  <script src="{{ script }}" type="text/javascript"></script>
 {% endfor %}
 <script defer rel="preload" as="script" type="text/javascript" src="catalog/view/theme/helium/js/common.js" type="text/javascript"></script>
 
