--- a/catalog/view/theme/helium/css/common.css
+++ b/catalog/view/theme/helium/css/common.css
@@ -224,7 +224,7 @@ input[type="radio"]:disabled, input[type="radio"]:disabled+label {
 }
 
 /* Breadcrumbs */
-.breadcrumbs.scroll-x {list-style-type: none; margin:-1rem 0; padding: 0; gap: 0;}
+
 .breadcrumbs li:not(:last-child):after {content: "\203A";padding: 1rem 0}
 .breadcrumbs li> * {padding: 0.5rem;white-space: nowrap;margin: 0.5rem}
 
@@ -299,21 +299,7 @@ aside#column-right  {order: 5}
 footer              {order: 6}
 .mobile_buttons     {order: 10}
 
-.mobile_buttons.scroll-x {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    gap: 0.3rem;
-    padding: 0.3rem;
-    background: var(--bg-main-blocks);
-}
-.mobile_buttons.scroll-x button {
-    display: flex;
-    flex-direction: column;
-    width: 20%;
-    flex: 1 0 auto!important;
-}
+
 
 /* Horizontal 100% width blocks */
 header, nav, footer, .breadcrumbs {
@@ -579,8 +565,15 @@ Each item needs a flex-grow and flex-shrink value of 0. The flex-basis property 
     /* flex: 0 1 auto!important; */
     scroll-snap-align: center;
     max-width: 100%;
-    margin: 0 1rem;
+    margin: 0 .5rem;
 }
+/* Max width for products and blog articles in scroll container */
+.scroll-x article {max-width: min(20rem, 100%);}
+/* Braedcrumbs scrolling */
+.breadcrumbs.scroll-x {list-style-type: none; margin:-1rem 0; padding: 0;}
+/* Mobile buttons scrolling */
+.mobile_buttons.scroll-x {position: fixed;bottom: 0;left: 0;right: 0;gap: 0.3rem;padding: 0.3rem;background: var(--bg-main-blocks);}
+.mobile_buttons.scroll-x button {display: flex;flex-direction: column;width: 20%;flex: 1 0 auto!important;}
 
 
 /* SCROLL X FOR COLUMNS, CHILD ELEMENT ALWAYS 100% WIDTH */
@@ -726,7 +719,8 @@ input#input-quantity {
 
 
 /* Media query for desktops */
-@media (min-width: 1024px) {
+/* 64rem = 1024px */
+@media (min-width: 64rem) {
     body {
         flex-direction: row;
         flex: 1;
@@ -765,7 +759,6 @@ input#input-quantity {
     }
 
     .mobile_buttons {display: none;}
-
 }
 /* @media screen and (max-width:820px) {
     body {padding: 0;}
