--- a/catalog/view/theme/helium/template/common/quick_checkout.twig
+++ b/catalog/view/theme/helium/template/common/quick_checkout.twig
@@ -24,13 +24,13 @@
 
   <div id="payment-new">
     <div class="form-group required">
-      <label for="input-payment-firstname">{{ entry_firstname }}, {{ entry_lastname }}</label>
+      <label for="input-quick-checkout-firstname">{{ entry_firstname }}, {{ entry_lastname }}</label>
       <input
         type="text"
         name="guest[firstname]"
         value="{{ firstname }}"
         placeholder="{{ entry_firstname }}"
-        id="input-payment-firstname"
+        id="input-quick-checkout-firstname"
         inputmode="text"
         enterkeyhint="next"
         autocapitalize="words"
@@ -41,7 +41,7 @@
         name="guest[lastname]"
         value="{{ lastname }}"
         placeholder="{{ entry_lastname }}"
-        id="input-payment-lastname"
+        id="input-quick-checkout-lastname"
         inputmode="text"
         enterkeyhint="next"
         autocapitalize="words"
@@ -50,13 +50,13 @@
     </div>
 
     <div class="form-group required">
-      <label for="input-payment-address-1">{{ entry_city }}, {{ entry_address_1 }}</label>
+      <label for="input-quick-checkout-address-1">{{ entry_city }}, {{ entry_address_1 }}</label>
       <input 
         type="text" 
         name="shipping_address[city]" 
         value="{{ city }}"
         placeholder="{{ entry_city }}" 
-        id="input-payment-city"
+        id="input-quick-checkout-city"
         inputmode="text"
         enterkeyhint="next"
         autocapitalize="words"
@@ -68,7 +68,7 @@
         name="shipping_address[address_1]"
         value="{{ address_1 }}"
         placeholder="{{ entry_address_1 }}"
-        id="input-payment-address-1"
+        id="input-quick-checkout-address-1"
         inputmode="text"
         enterkeyhint="next"
         autocapitalize="words"
@@ -79,25 +79,25 @@
 
 {# 
     <div class="form-group required">
-      <label for="input-payment-email">{{ entry_email }}</label>
+      <label for="input-quick-checkout-email">{{ entry_email }}</label>
       <input
         type="email"
         name="email"
         value="{{ email }}"
         placeholder="{{ entry_email }}"
-        id="input-payment-email"
+        id="input-quick-checkout-email"
         inputmode="email"
         enterkeyhint="next"
       />
     </div> #}
     <div class="form-group required">
-      <label for="input-payment-telephone">{{ entry_telephone }}</label>
+      <label for="input-quick-checkout-telephone">{{ entry_telephone }}</label>
       <input
         type="tel"
         name="guest[telephone]"
         value="{{ telephone }}"
         placeholder="{{ entry_telephone }}"
-        id="input-payment-telephone"
+        id="input-quick-checkout-telephone"
         inputmode="tel"
         enterkeyhint="next"
         minlength="3" maxlength="32"
@@ -105,13 +105,13 @@
     </div>
 
     {# <div class="form-group">
-      <label for="input-payment-postcode">{{ entry_postcode }}</label>
+      <label for="input-quick-checkout-postcode">{{ entry_postcode }}</label>
       <input
         type="text"
         name="postcode"
         value="{{ postcode }}"
         placeholder="{{ entry_postcode }}"
-        id="input-payment-postcode"
+        id="input-quick-checkout-postcode"
         inputmode="numeric"
         enterkeyhint="next"
         minlength="3" maxlength="32"
@@ -120,8 +120,8 @@
     </div> #}
 
     <div class="form-group required">
-      <label for="input-payment-country">{{ entry_country }}</label>
-      <select name="shipping_address[country_id]" id="input-payment-country">
+      <label for="input-quick-checkout-country">{{ entry_country }}</label>
+      <select name="shipping_address[country_id]" id="input-quick-checkout-country">
         <option value="">{{ text_select }}</option>
         {% for country in countries %}
           {% if country.country_id == country_id %}
@@ -138,149 +138,15 @@
       <select name="shipping_address[zone_id]" id="js_input_payment_zone_quick_checkout"></select>
     </div>
 
-    {% for custom_field in custom_fields %}
-      {% if custom_field.type == 'select' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">
-          {{ custom_field.name }}
-        </label>
-        <div class="col-sm-10">
-          <select name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">
-            <option value="">{{ text_select }}</option>
-            {% for custom_field_value in custom_field.custom_field_value %}
-            <option value="{{ custom_field_value.custom_field_value_id }}">{{ custom_field_value.name }}</option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'radio' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-            {% for custom_field_value in custom_field.custom_field_value %}
-            <div class="form-control">
-              <input type="radio" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field_value.custom_field_value_id }}" />
-              <label>{{ custom_field_value.name }}</label>
-            </div>
-            {% endfor %}
-          </div>
-        </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'checkbox' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-          <div id="input-payment-custom-field{{ custom_field.custom_field_id }}">
-            {% for custom_field_value in custom_field.custom_field_value %}
-            <div class="form-control">
-              <label>{{ custom_field_value.name }}</label>
-              <input type="checkbox" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}][]" value="{{ custom_field_value.custom_field_value_id }}" />
-            </div>
-            {% endfor %}
-        </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'text' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <input type="text" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="{{ custom_field.value }}" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'textarea' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <textarea name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" rows="5" placeholder="{{ custom_field.name }}" id="input-payment-custom-field{{ custom_field.custom_field_id }}" class="form-control">{{ custom_field.value }}</textarea>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'file' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label>{{ custom_field.name }}</label>
-        <div class="col-sm-10">
-          <button type="button" id="button-payment-custom-field{{ custom_field.custom_field_id }}" class="button"><i class="fa fa-upload"></i> {{ button_upload }}</button>
-          <input type="hidden" name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" value="" id="input-payment-custom-field{{ custom_field.custom_field_id }}" />
-        </div>
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'date' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <input
-          type="date"
-          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-          value="{{ custom_field.value }}"
-          placeholder="{{ custom_field.name }}"
-          
-          id="input-payment-custom-field{{ custom_field.custom_field_id }}"
-          min="{{ now|date('Y-m-d') }}"
-        />
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'time' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <input 
-          type="time" 
-          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]" 
-          value="{{ custom_field.value }}" 
-          placeholder="{{ custom_field.name }}" 
-          data-date-format="HH:mm" 
-          id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
-          min="08:00" max="20:00"
-          data-action="correctTime" 
-        />
-      </div>
-      {% endif %}
-      {% if custom_field.type == 'datetime' %}
-      <div class="form-group{% if custom_field.required %} required {% endif %} custom-field" data-sort="{{ custom_field.sort_order }}">
-        <label for="input-payment-custom-field{{ custom_field.custom_field_id }}">{{ custom_field.name }}</label>
-        <input 
-          type="datetime-local"
-          name="custom_field[{{ custom_field.location }}][{{ custom_field.custom_field_id }}]"
-          value="{{ custom_field.value }}"
-          placeholder="{{ custom_field.name }}" 
-          min="{{ now|date('Y-m-d\\TH:i') }}"
-          id="input-payment-custom-field{{ custom_field.custom_field_id }}" 
-          data-action="correctTime" 
-          
-        />
-      </div>
-      {% endif %}
-    {% endfor %}
+    {# Custom fields #}
+    {% include 'helium/template/common/custom_fields.twig' with {type: 'shipping'} %}
     {# Shipping methods #}
-    {% if shipping_methods %}
-      {% for shipping_method in shipping_methods %}
-        {% if not shipping_method.error %}
-          {% if shipping_method.quote %}
-            {% for quote in shipping_method.quote %}
-              <div class="form-control">
-                {% if quote.code == code or not code %}
-                  {% set code = quote.code %}
-                    <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" checked="checked" />
-                  {% else %}
-                    <input id="{{ quote.code }}" type="radio" name="shipping_method" value="{{ quote.code }}" />
-                  {% endif %}
-                <label for="{{ quote.code }}">{{ quote.title }} - {{ quote.text }}</label>
-              </div>
-            {% endfor %}
-          {% else %}
-            {% if shipping_method.status == 1 %}
-              <div class="form-control">
-            <input type="radio" value="{{ shipping_method.code }}" id="shipping_{{ shipping_method.code }}" name="shipping_method" {% if loop.first %} checked {% endif %}/>
-                <label for="shipping_{{ shipping_method.code }}">{{ shipping_method.title }}</label>
-              </div>
-            {% endif %}
-          {% endif %}
-        {% else %}
-          <div class="alert alert-danger">{{ shipping_method.error }}</div>
-        {% endif %}
-      {% endfor %}
-    {% endif %}
+    {% include 'helium/template/common/quick_checkout_shipping.twig' %}
+
   </div>
   <div class="buttons clearfix">
     <div class="pull-right">
-      <button type="button" id="button-payment-address" class="primary">{{ button_continue }}</button>
+      <button type="button" id="validate-quick-checkout" class="primary">{{ button_continue }}</button>
     </div>
   </div>
 </form>
